--- a/aws-ecr-continuouscompliance/cft/aws-ecr-continuouscompliance-v1.yaml
+++ b/aws-ecr-continuouscompliance/cft/aws-ecr-continuouscompliance-v1.yaml
@@ -81,8 +81,8 @@ Resources:
                   numMedium = findingsevcounts['MEDIUM']
                           
               # send finding to Security Hub
-              severity = ""
-              title = ""
+              severity = "LOW"
+              title = "ECR Finding"
               ECRComplianceRating = 'PASSED'
               if numCritical:
                   severity = "CRITICAL"
