--- a/aws-auditmanager-securityhub/cft/aws-auditmanager-securityhub.yml
+++ b/aws-auditmanager-securityhub/cft/aws-auditmanager-securityhub.yml
@@ -19,6 +19,13 @@ Parameters:
     MinLength: '1'
     MaxLength: '255'
 
+  AuditOwnerRoleArn:
+    Description: ARN for IAM Audit Owner in your account
+    Type: String
+    Default: 'arn:aws:iam::<AccountId>:role/Administrator'
+    MinLength: '1'
+    MaxLength: '255'
+
 Resources:
 
 #---------------------------------------------------------------------------------------------------
@@ -128,6 +135,6 @@ Resources:
                 Effect: Allow
                 Resource: '*'
       ManagedPolicyArns:
-        - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AdministratorAccess'
+        - !Ref AuditOwnerRoleArn
         - !Sub 'arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
 
