batchimportfindings use partition var

--- a/aws-ecr-continuouscompliance/cft/aws-ecr-continuouscompliance-v1.yaml
+++ b/aws-ecr-continuouscompliance/cft/aws-ecr-continuouscompliance-v1.yaml
@@ -137,7 +137,7 @@ Resources:
                               {
                                   'Type': 'AwsEcr',
                                   'Id': 'AWS::::Account:' + accountId,
-                                  'Partition': 'aws',
+                                  'Partition': awsPartition,
                                   'Region': awsRegion,
                               }
                           ],
